# Many-to-many-transfer-of-LIBS-spectra-across-multiple-experimental-conditions

./: .gitattributes  CNN_conc_baseline.py  CNN_conc_transferred.py  Hyperparam_ACVAE.py  LICENSE  PCA_distance_filering.py  PDS_PLS.py  PDS_PLS_transform.py  PDS_transform.py  PolyHyper.py  README.md  bin.py  clustering_differences.py  consine_loss.py  dataset_test.py  discriminator.py  discriminator_bin.py  discriminator_new_data.py  gather_results.py  kmeans_conc_sample_name_to_cluster.json  kmeans_loss_mean.py  match_clusters.py  models.py  modules.py  new_data_to_h5.py  optimize_k_means.py  optimize_k_means_concentration.py  optimize_t_sne.py  original_classifier.py  preprocessing_LIBS.py  pyproject.toml  reg_cluster_earth_dict.json  reg_cluster_mars_dict.json  reg_cluster_vacuum_dict.json  reg_conditions_dict.json  reg_labels_dict.json  spectra_loader.py  spectra_normalization.py  spectra_transfer_test.py  transfer_spectra.py  (+4 more)
examples/: full_pipeline.py  prepare_raw_data.py  train_acvae.py  train_cnn.py  transfer_spectra.py
examples/processed_data/: Concentrations.xlsx  atm_dict.json  label_dict.json  perc_dict.json  spectra.h5
libs_transfer/hyperparam_search/: Hyperparam_ACVAE.py
libs_transfer/integral/: integral_linear.py  spectra_integral.py
libs_transfer/prepare_data/: __init__.py  data_visualization.py  new_data_to_h5.py  spectra_normalization.py
libs_transfer/training/: CNN_conc_baseline.py  PDS.py  PDS_PLS_transform.py  PDS_transform.py  __init__.py  acvae_training.py  consine_loss.py  consine_loss_mean.py  discriminator_new_data.py  evaluation_metrics.py  gather_results.py  kmeans_loss.py  kmeans_loss_mean.py  match_clusters.py  models.py  modules.py
(+8 files in other folders)
