[project]
name = "libs-transfer"
version = "0.1.0"
description = "Many-to-many transfer of LIBS spectra across multiple experimental conditions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.16.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.setuptools]
packages = ["libs_transfer", "libs_transfer.prepare_data"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"